CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
CMAKE_POLICY(VERSION 3.10)

PROJECT(solution)

LIST (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

SET (APP_INCLUDE_DIRS CACHE INTERNAL "The list of include folders to search for the app.")
SET (APP_LIBS CACHE INTERNAL "The list of libraries that the app should link against.")


FIND_PACKAGE(Threads REQUIRED)
LIST (APPEND APP_LIBS Threads::Threads)

FIND_PACKAGE(Gramods REQUIRED)
LIST (APPEND APP_INCLUDE_DIRS ${Gramods_INCLUDE_DIRS})
LIST (APPEND APP_LIBS ${Gramods_LIBS})

FIND_PACKAGE(OpenSceneGraph REQUIRED osgGA osgViewer osgDB osgUtil)
LIST (APPEND APP_INCLUDE_DIRS ${OPENSCENEGRAPH_INCLUDE_DIRS})
LIST (APPEND APP_LIBS ${OPENSCENEGRAPH_LIBRARIES})

#IF ("${CMAKE_CXX_COMPILER_VERSION}" VERSION_LESS "9.0")
#  LIST (APPEND APP_LIBS stdc++fs)
#ENDIF()


ADD_EXECUTABLE(main main.cpp MyApp.cpp MyApp.hh)

TARGET_INCLUDE_DIRECTORIES(main PUBLIC ${APP_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(main ${APP_LIBS})
SET_PROPERTY(TARGET main PROPERTY CXX_STANDARD 17)
